# robust-rl-quadrotor-control

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
figures/: log_plotting.py
models/ppo/: best_vec_normalize.pkl  vec_normalize.pkl
models/ppo_phase2/: best_vec_normalize.pkl  vec_normalize.pkl
models/ppo_phase3/: best_vec_normalize.pkl  vec_normalize.pkl
models/ppo_phase3_old_rawreward/: vec_normalize.pkl
models/ppo_phase4/: best_vec_normalize.pkl  vec_normalize.pkl
models/ppo_phase5/: best_vec_normalize.pkl  vec_normalize.pkl
src/controllers/: lqr.py  pid.py  ppo.py
src/envs/: hover_env.py
src/quadrotor/: dynamics.py  params.py  simulator.py
src/quadrotor/controllers/: pid.py
src/robust_rl_quadrotor_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tensorboard/ppo/PPO_0/: events.out.tfevents.1784403309.Henrys-MacBook-Pro.local.32676.0  events.out.tfevents.1784409648.Henrys-MacBook-Pro.local.32676.1  events.out.tfevents.1784413939.Henrys-MacBook-Pro.local.32676.2  events.out.tfevents.1784449073.Henrys-MacBook-Pro.local.49914.0  events.out.tfevents.1784458281.Henrys-MacBook-Pro.local.49914.1  events.out.tfevents.1784462230.Henrys-MacBook-Pro.local.49914.2  events.out.tfevents.1784603186.Henrys-MacBook-Pro.local.13791.1  (+1 more)
tests/: compare.py  test_climb_descend.py  test_freefall.py  test_hover.py  test_hover_env.py  test_lqr_tuning.py  test_periodic_thrust.py  test_pid_controller.py  test_pid_hover.py  test_pid_tuning.py  test_ppo.py  test_purepitch.py  test_pureroll.py  test_pureyaw.py
(+24 files in other folders)
